--- a/assets/css/print.css
+++ b/assets/css/print.css
@@ -897,23 +897,23 @@ footer > div {
     footer > div {
       line-height: 2.5em; } }
 
-.main ol, .c-conference__menu ol {
+.main ol {
   margin-left: 1.5em;
   margin-top: 0.7em;
   margin-bottom: 2em; }
-  .main ol li, .c-conference__menu ol li {
+  .main ol li {
     margin-bottom: 0.7em; }
-    .main ol li p, .c-conference__menu ol li p {
+    .main ol li p {
       margin-bottom: 0; }
-  .main ol ul, .c-conference__menu ol ul {
+  .main ol ul {
     margin-bottom: 0; }
-    .main ol ul li, .c-conference__menu ol ul li {
+    .main ol ul li {
       margin-top: 0.1em;
       margin-bottom: 0.1em; }
-.main ul, .c-conference__menu ul {
+.main ul {
   margin-left: 1.5em;
   margin-bottom: 1em; }
-  .main ul li, .c-conference__menu ul li {
+  .main ul li {
     margin-bottom: 0.6em; }
 
 .t-blog ol {
