--- a/assets/stylesheets/layout/_list.scss
+++ b/assets/stylesheets/layout/_list.scss
@@ -1,4 +1,4 @@
-.main, .c-conference__menu {
+.main {
   ol {
     margin-left: 1.5em;
     margin-top: 0.7em;
